--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ div#add-note-container button {
   cursor: pointer;
 }
 
-div#add-note-container form#add-note {
+div#add-note-container form#add-note, div.single-note form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -71,20 +71,20 @@ div#add-note-container form#add-note {
   margin: auto;
 }
 
-form#add-note label {
+form#add-note label, div.single-note form label {
   font-size: 20px;
   text-align: left;
   margin-bottom: -10px;
   margin-top: 0px;
 }
 
-form#add-note input,textarea {
+form#add-note input,textarea, div.single-note form input,textarea {
   font-size: 20px;
   padding: 10px 10px;
   border-radius: 10px;
 }
 
-form#add-note textarea {
+form#add-note textarea, div.single-note form textarea {
   resize: none;
   height: 20vh;
 }
@@ -110,10 +110,10 @@ div#show-notes div.single-note {
   display: flex;
   flex-direction: column;
   margin: 10px auto;
-  width: 95%;
+  width: 80%;
   border: 2px solid lightgray;
   background-color: whitesmoke;
-  padding: 5px;
+  padding: 20px;
   border-radius: 10px;
 }
 
@@ -146,8 +146,19 @@ button.update {
   background-color: skyblue;
 }
 
-button.delete {
+button.delete,button.cancel {
   background-color: crimson;
+}
+
+div.single-note form button {
+  font-size: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 10px;
+} 
+
+div.single-note form button:hover {
+  background-color: lightgrey;
 }
 
 
